Fix table sizing and added space for charts

--- a/tester.html
+++ b/tester.html
@@ -101,9 +101,11 @@
                             amet
                             est placerat in egestas. Habitant morbi tristique senectus et netus et. </p>
 
-                        <div>
-                            <!-- TABLE FINGAL -->
-                            <div>
+                        <span class="const-section-bottom">
+                            <div class="chart-wrapper">
+                                <p>This is where this will go ------------------------------------------------------->
+                                </p>
+
                                 <table class="const-table">
                                     <tr class="table-head">
                                         <th>Party</th>
@@ -173,18 +175,9 @@
                                     </tr>
                                 </table>
                             </div>
-
-
-
-
-                        </div>
-                        <!-- </div> -->
-                        <!-- <div class="card-front">
-
-
-                        </div> -->
-
+                        </span>
                     </div>
+
 
                     <div class="item dbn" style="display: none;">
                         <div class="item_info">
@@ -199,9 +192,12 @@
                             proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet est
                             placerat in egestas.
                         </p>
-                        <div>
-                            <!-- TABLE FINGAL -->
-                            <div>
+
+                        <span class="const-section-bottom">
+                            <div class="chart-wrapper">
+                                <p>This is where this will go ------------------------------------------------------->
+                                </p>
+
                                 <table class="const-table">
                                     <tr class="table-head">
                                         <th>Party</th>
@@ -271,9 +267,7 @@
                                     </tr>
                                 </table>
                             </div>
-
-                        </div>
-
+                        </span>
                     </div>
 
                     <div class="item dbs" style="display: none;">
@@ -290,9 +284,11 @@
                             proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet est
                             placerat in egestas. Habitant morbi tristique senectus et netus et.
                         </p>
-                        <div>
-                            <!-- TABLE FINGAL -->
-                            <div>
+                        <span class="const-section-bottom">
+                            <div class="chart-wrapper">
+                                <p>This is where this will go ------------------------------------------------------->
+                                </p>
+
                                 <table class="const-table">
                                     <tr class="table-head">
                                         <th>Party</th>
@@ -362,12 +358,9 @@
                                     </tr>
                                 </table>
                             </div>
-
-
-
-
-                        </div>
+                        </span>
                     </div>
+
 
                     <div class="item dc" style="display: none;">
                         <div class="item_info">
@@ -383,9 +376,11 @@
 
 
 
-                        <div>
-                            <!-- TABLE FINGAL -->
-                            <div>
+                        <span class="const-section-bottom">
+                            <div class="chart-wrapper">
+                                <p>This is where this will go ------------------------------------------------------->
+                                </p>
+
                                 <table class="const-table">
                                     <tr class="table-head">
                                         <th>Party</th>
@@ -455,8 +450,9 @@
                                     </tr>
                                 </table>
                             </div>
-                        </div>
+                        </span>
                     </div>
+
                     <div class="item dmw" style="display: none;">
                         <div class="item_info">
                             <div class="img"></div>
@@ -469,9 +465,11 @@
                             Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
                             est placerat in egestas. Habitant morbi tristique senectus et netus et.</p>
 
-                        <div>
-                            <!-- TABLE FINGAL -->
-                            <div>
+                        <span class="const-section-bottom">
+                            <div class="chart-wrapper">
+                                <p>This is where this will go ------------------------------------------------------->
+                                </p>
+
                                 <table class="const-table">
                                     <tr class="table-head">
                                         <th>Party</th>
@@ -541,11 +539,9 @@
                                     </tr>
                                 </table>
                             </div>
-
-                        </div>
-
-
+                        </span>
                     </div>
+
 
                     <div class="item dnw" style="display: none;">
                         <div class="item_info">
@@ -558,12 +554,11 @@
                             scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
                             Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
                             est placerat in egestas. Habitant morbi tristique senectus et netus et. </p>
+                        <span class="const-section-bottom">
+                            <div class="chart-wrapper">
+                                <p>This is where this will go ------------------------------------------------------->
+                                </p>
 
-
-
-                        <div>
-                            <!-- TABLE FINGAL -->
-                            <div>
                                 <table class="const-table">
                                     <tr class="table-head">
                                         <th>Party</th>
@@ -633,9 +628,9 @@
                                     </tr>
                                 </table>
                             </div>
-
-                        </div>
+                        </span>
                     </div>
+
 
                     <div class="item drd" style="display: none;">
                         <div class="item_info">
@@ -648,11 +643,11 @@
                             scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
                             Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
                             est placerat in egestas. Habitant morbi tristique senectus et netus et. </p>
+                        <span class="const-section-bottom">
+                            <div class="chart-wrapper">
+                                <p>This is where this will go ------------------------------------------------------->
+                                </p>
 
-
-                        <div>
-                            <!-- TABLE FINGAL -->
-                            <div>
                                 <table class="const-table">
                                     <tr class="table-head">
                                         <th>Party</th>
@@ -722,9 +717,7 @@
                                     </tr>
                                 </table>
                             </div>
-                        </div>
-
-
+                        </span>
                     </div>
 
                     <div class="item dsc" style="display: none;">
@@ -737,9 +730,11 @@
                             labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
                             scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
                             Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. </p>
-                        <div>
-                            <!-- TABLE FINGAL -->
-                            <div>
+                        <span class="const-section-bottom">
+                            <div class="chart-wrapper">
+                                <p>This is where this will go ------------------------------------------------------->
+                                </p>
+
                                 <table class="const-table">
                                     <tr class="table-head">
                                         <th>Party</th>
@@ -809,7 +804,7 @@
                                     </tr>
                                 </table>
                             </div>
-                        </div>
+                        </span>
                     </div>
 
                     <div class="item dsw" style="display: none;">
@@ -823,10 +818,11 @@
                             scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
                             Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
                             est placerat in egestas. Habitant morbi tristique senectus et netus et. </p>
+                        <span class="const-section-bottom">
+                            <div class="chart-wrapper">
+                                <p>This is where this will go ------------------------------------------------------->
+                                </p>
 
-                        <div>
-                            <!-- TABLE FINGAL -->
-                            <div>
                                 <table class="const-table">
                                     <tr class="table-head">
                                         <th>Party</th>
@@ -896,8 +892,9 @@
                                     </tr>
                                 </table>
                             </div>
-                        </div>
+                        </span>
                     </div>
+
 
                     <div class="item dw" style="display: none;">
                         <div class="item_info">
@@ -910,11 +907,11 @@
                             scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
                             Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
                             est placerat in egestas. Habitant morbi tristique senectus et netus et. </p>
+                        <span class="const-section-bottom">
+                            <div class="chart-wrapper">
+                                <p>This is where this will go ------------------------------------------------------->
+                                </p>
 
-
-                        <div>
-                            <!-- TABLE FINGAL -->
-                            <div>
                                 <table class="const-table">
                                     <tr class="table-head">
                                         <th>Party</th>
@@ -984,7 +981,7 @@
                                     </tr>
                                 </table>
                             </div>
-                        </div>
+                        </span>
                     </div>
 
                     <div class="item dl" style="display: none;">
@@ -998,12 +995,11 @@
                             scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
                             Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
                             est placerat in egestas. </p>
+                        <span class="const-section-bottom">
+                            <div class="chart-wrapper">
+                                <p>This is where this will go ------------------------------------------------------->
+                                </p>
 
-
-
-                        <div>
-                            <!-- TABLE FINGAL -->
-                            <div>
                                 <table class="const-table">
                                     <tr class="table-head">
                                         <th>Party</th>
@@ -1073,8 +1069,9 @@
                                     </tr>
                                 </table>
                             </div>
-                        </div>
+                        </span>
                     </div>
+
                     <!-- END CONTAINER -->
                 </div>
             </div>
