Add table colours and sized evenly

--- a/tester.html
+++ b/tester.html
@@ -223,7 +223,7 @@
                                     </tr>
                                     <tr>
                                         <td class="sf-color-box">1</td>
-                                        <td class="ff-color-box">2</td>
+                                        <td class="fg-color-box">2</td>
                                         <td class="lab-color-box">3</td>
                                         <td class="ff-color-box">4</td>
                                         <td class="sdem-color-box">5</td>
@@ -535,16 +535,16 @@
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
                                         <th>SF</th>
+                                        <th>SF</th>
                                         <th>FG</th>
-                                        <th>GP</th>
-                                        <th>SD</th>
+                                        <th>S-PBP</th>
 
                                     </tr>
                                     <tr>
                                         <td class="sf-color-box">1</td>
-                                        <td class="fg-color-box">2</td>
-                                        <td class="gp-color-box">3</td>
-                                        <td class="sdem-color-box">4</td>
+                                        <td class="sf-color-box">2</td>
+                                        <td class="fg-color-box">3</td>
+                                        <td class="s-pbp-color-box">4</td>
 
                                     </tr>
 
@@ -640,16 +640,14 @@
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
                                         <th>SF</th>
-                                        <th>FG</th>
-                                        <th>GP</th>
                                         <th>SD</th>
+                                        <th>FF</th>
 
                                     </tr>
                                     <tr>
                                         <td class="sf-color-box">1</td>
-                                        <td class="fg-color-box">2</td>
-                                        <td class="gp-color-box">3</td>
-                                        <td class="sdem-color-box">4</td>
+                                        <td class="sdem-color-box">2</td>
+                                        <td class="ff-color-box">3</td>
 
                                     </tr>
 
@@ -744,17 +742,15 @@
 
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
-                                        <th>SF</th>
-                                        <th>FG</th>
                                         <th>GP</th>
-                                        <th>SD</th>
+                                        <th>FG</th>
+                                        <th>FG</th>
 
                                     </tr>
                                     <tr>
-                                        <td class="sf-color-box">1</td>
+                                        <td class="gp-color-box">1</td>
                                         <td class="fg-color-box">2</td>
-                                        <td class="gp-color-box">3</td>
-                                        <td class="sdem-color-box">4</td>
+                                        <td class="fg-color-box">3</td>
 
                                     </tr>
 
@@ -848,16 +844,16 @@
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
                                         <th>SF</th>
-                                        <th>FG</th>
+                                        <th>S-PBP</th>
                                         <th>GP</th>
-                                        <th>SD</th>
+                                        <th>I4C</th>
 
                                     </tr>
                                     <tr>
                                         <td class="sf-color-box">1</td>
-                                        <td class="fg-color-box">2</td>
+                                        <td class="s-pbp-color-box">2</td>
                                         <td class="gp-color-box">3</td>
-                                        <td class="sdem-color-box">4</td>
+                                        <td class="i4c-color-box">4</td>
 
                                     </tr>
 
@@ -953,15 +949,18 @@
                                     <tr class="table-head-2">
                                         <th>SF</th>
                                         <th>FG</th>
+                                        <th>FF</th>
                                         <th>GP</th>
-                                        <th>SD</th>
+                                        <th>S-PBP</th>
 
                                     </tr>
                                     <tr>
                                         <td class="sf-color-box">1</td>
                                         <td class="fg-color-box">2</td>
-                                        <td class="gp-color-box">3</td>
-                                        <td class="sdem-color-box">4</td>
+                                        <td class="ff-color-box">3</td>
+                                        <td class="gp-color-box">4</td>
+                                        <td class="s-pbp-color-box">5</td>
+
 
                                     </tr>
 
@@ -1058,15 +1057,15 @@
                                     <tr class="table-head-2">
                                         <th>SF</th>
                                         <th>FG</th>
+                                        <th>FF</th>
                                         <th>GP</th>
-                                        <th>SD</th>
 
                                     </tr>
                                     <tr>
                                         <td class="sf-color-box">1</td>
                                         <td class="fg-color-box">2</td>
-                                        <td class="gp-color-box">3</td>
-                                        <td class="sdem-color-box">4</td>
+                                        <td class="ff-color-box">3</td>
+                                        <td class="gp-color-box">4</td>
 
                                     </tr>
 
@@ -1160,17 +1159,17 @@
 
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
-                                        <th>SF</th>
-                                        <th>FG</th>
+                                        <th>S-PBP</th>
                                         <th>GP</th>
-                                        <th>SD</th>
+                                        <th>FG</th>
+                                        <th>FF</th>
 
                                     </tr>
                                     <tr>
-                                        <td class="sf-color-box">1</td>
-                                        <td class="fg-color-box">2</td>
-                                        <td class="gp-color-box">3</td>
-                                        <td class="sdem-color-box">4</td>
+                                        <td class="s-pbp-color-box">1</td>
+                                        <td class="gp-color-box">2</td>
+                                        <td class="fg-color-box">3</td>
+                                        <td class="ff-color-box">4</td>
 
                                     </tr>
 
