Add new chart styles and svg files

--- a/tester.html
+++ b/tester.html
@@ -102,9 +102,11 @@
                             est placerat in egestas. Habitant morbi tristique senectus et netus et. </p>
 
                         <span class="const-section-bottom">
-                            <div class="chart-wrapper">
-                                <p>This is where this will go ------------------------------------------------------->
-                                </p>
+                            <div>
+                                <div class="chart-wrapper">
+                                    <img class="chart-img" src="/assets/img/fingalchartfit1.svg" alt="">
+                                </div>
+
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
                                         <th>SF</th>
@@ -1154,8 +1156,9 @@
                             est placerat in egestas. </p>
                         <span class="const-section-bottom">
                             <div class="chart-wrapper">
-                                <p>This is where this will go ------------------------------------------------------->
-                                </p>
+                                <div>
+                                    <img class="const-charts" src="/assets/img/Fingalchart.png" alt="">
+                                </div>
 
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
