Add new svg charts

--- a/tester.html
+++ b/tester.html
@@ -104,7 +104,7 @@
                         <span class="const-section-bottom">
                             <div>
                                 <div class="chart-wrapper">
-                                    <img class="chart-img" src="/assets/img/fingalchartfit1.svg" alt="">
+                                    <img class="chart-img" src="/assets/img/FingalNew12.svg" alt="">
                                 </div>
 
                                 <table class="const-table-2">
@@ -211,9 +211,10 @@
                         </p>
 
                         <span class="const-section-bottom">
-                            <div class="chart-wrapper">
-                                <p>This is where this will go ------------------------------------------------------->
-                                </p>
+                            <div>
+                                <div class="chart-wrapper">
+                                    <img class="chart-img" src="/assets/img/DBNnew1.svg" alt="">
+                                </div>
 
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
@@ -318,9 +319,10 @@
                             placerat in egestas. Habitant morbi tristique senectus et netus et.
                         </p>
                         <span class="const-section-bottom">
-                            <div class="chart-wrapper">
-                                <p>This is where this will go ------------------------------------------------------->
-                                </p>
+                            <div>
+                                <div class="chart-wrapper">
+                                    <img class="chart-img" src="/assets/img/DBSnew1.svg" alt="">
+                                </div>
 
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
@@ -426,9 +428,11 @@
 
 
                         <span class="const-section-bottom">
-                            <div class="chart-wrapper">
-                                <p>This is where this will go ------------------------------------------------------->
-                                </p>
+
+                            <div>
+                                <div class="chart-wrapper">
+                                    <img class="chart-img" src="/assets/img/DCnew1.svg" alt="">
+                                </div>
 
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
@@ -531,9 +535,10 @@
                             est placerat in egestas. Habitant morbi tristique senectus et netus et.</p>
 
                         <span class="const-section-bottom">
-                            <div class="chart-wrapper">
-                                <p>This is where this will go ------------------------------------------------------->
-                                </p>
+                            <div>
+                                <div class="chart-wrapper">
+                                    <img class="chart-img" src="/assets/img/DMWnew1.svg" alt="">
+                                </div>
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
                                         <th>SF</th>
@@ -635,9 +640,10 @@
                             Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
                             est placerat in egestas. Habitant morbi tristique senectus et netus et. </p>
                         <span class="const-section-bottom">
-                            <div class="chart-wrapper">
-                                <p>This is where this will go ------------------------------------------------------->
-                                </p>
+                            <div>
+                                <div class="chart-wrapper">
+                                    <img class="chart-img" src="/assets/img/DNWnew1.svg" alt="">
+                                </div>
 
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
@@ -738,9 +744,10 @@
                             Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
                             est placerat in egestas. Habitant morbi tristique senectus et netus et. </p>
                         <span class="const-section-bottom">
-                            <div class="chart-wrapper">
-                                <p>This is where this will go ------------------------------------------------------->
-                                </p>
+                            <div>
+                                <div class="chart-wrapper">
+                                    <img class="chart-img" src="/assets/img/DRDnew1.svg" alt="">
+                                </div>
 
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
@@ -839,9 +846,10 @@
                             scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
                             Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. </p>
                         <span class="const-section-bottom">
-                            <div class="chart-wrapper">
-                                <p>This is where this will go ------------------------------------------------------->
-                                </p>
+                            <div>
+                                <div class="chart-wrapper">
+                                    <img class="chart-img" src="/assets/img/DSCnew1.svg" alt="">
+                                </div>
 
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
@@ -943,10 +951,10 @@
                             Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
                             est placerat in egestas. Habitant morbi tristique senectus et netus et. </p>
                         <span class="const-section-bottom">
-                            <div class="chart-wrapper">
-                                <p>This is where this will go ------------------------------------------------------->
-                                </p>
-
+                            <div>
+                                <div class="chart-wrapper">
+                                    <img class="chart-img" src="/assets/img/DSWnew1.svg" alt="">
+                                </div>
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
                                         <th>SF</th>
@@ -1051,10 +1059,10 @@
                             Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
                             est placerat in egestas. Habitant morbi tristique senectus et netus et. </p>
                         <span class="const-section-bottom">
-                            <div class="chart-wrapper">
-                                <p>This is where this will go ------------------------------------------------------->
-                                </p>
-
+                            <div>
+                                <div class="chart-wrapper">
+                                    <img class="chart-img" src="/assets/img/DWnew1.svg" alt="">
+                                </div>
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
                                         <th>SF</th>
@@ -1155,11 +1163,10 @@
                             Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
                             est placerat in egestas. </p>
                         <span class="const-section-bottom">
-                            <div class="chart-wrapper">
-                                <div>
-                                    <img class="const-charts" src="/assets/img/Fingalchart.png" alt="">
+                            <div>
+                                <div class="chart-wrapper">
+                                    <img class="chart-img" src="/assets/img/DLnew1.svg" alt="">
                                 </div>
-
                                 <table class="const-table-2">
                                     <tr class="table-head-2">
                                         <th>S-PBP</th>
