--- a/tester.html
+++ b/tester.html
@@ -132,15 +132,15 @@
                                         </tr>
                                         <tr>
                                             <td>Sinn Fein</td>
-                                            <td>150,000</td>
-                                            <td>10</td>
-                                            <td>+7</td>
+                                            <td>21,344</td>
+                                            <td>1</td>
+                                            <td>-</td>
                                         </tr>
                                         <tr>
                                             <td>Fine Gael</td>
-                                            <td>108,000</td>
-                                            <td>10</td>
-                                            <td>-5</td>
+                                            <td>13,435</td>
+                                            <td>1</td>
+                                            <td>-</td>
                                         </tr>
                                         <tr>
                                             <td>Green Party</td>
@@ -241,64 +241,59 @@
                                         </tr>
                                         <tr>
                                             <td>Sinn Fein</td>
-                                            <td>150,000</td>
-                                            <td>10</td>
-                                            <td>+7</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Fine Gael</td>
-                                            <td>108,000</td>
-                                            <td>10</td>
-                                            <td>-5</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Green Party</td>
-                                            <td>85,000</td>
-                                            <td>8</td>
-                                            <td>+7</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Fianna Fáil</td>
-                                            <td>69,000</td>
-                                            <td>7</td>
-                                            <td>+4</td>
-                                        </tr>
-                                        <tr>
-                                            <td>S-PBP</td>
-                                            <td>50,000</td>
-                                            <td>4</td>
-                                            <td>-1</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Soc Dems</td>
-                                            <td>42,000</td>
-                                            <td>3</td>
-                                            <td>+2</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Labour</td>
-                                            <td>32,000</td>
-                                            <td>2</td>
+                                            <td>21,344</td>
+                                            <td>1</td>
                                             <td>-</td>
                                         </tr>
                                         <tr>
-                                            <td>Ind4Change</td>
-                                            <td>15,000</td>
+                                            <td>Fine Gael</td>
+                                            <td>13,435</td>
                                             <td>1</td>
+                                            <td>-</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Fianna Fáil</td>
+                                            <td>10,294</td>
+                                            <td>1</td>
+                                            <td>-</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Labour</td>
+                                            <td>8,127</td>
+                                            <td>1</td>
+                                            <td>+1</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Soc Dems</td>
+                                            <td>6,229</td>
+                                            <td>1</td>
+                                            <td>+1</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Green Party</td>
+                                            <td>5,042</td>
+                                            <td>0</td>
+                                            <td>-</td>
+                                        </tr>
+                                        <tr>
+                                            <td>S-PBP</td>
+                                            <td>2,131</td>
+                                            <td>0</td>
+                                            <td>-</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Aontu</td>
+                                            <td>973</td>
+                                            <td>0</td>
                                             <td>-</td>
                                         </tr>
                                         <tr>
                                             <td>Independents</td>
-                                            <td>15,000</td>
-                                            <td>1</td>
-                                            <td>-</td>
+                                            <td>4,031</td>
+                                            <td>0</td>
+                                            <td>-2</td>
                                         </tr>
-                                        <tr>
-                                            <td>Other</td>
-                                            <td>15,000</td>
-                                            <td>1</td>
-                                            <td>-</td>
-                                        </tr>
+
                                     </table>
                             </div>
                         </span>
