--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>GE 2020 - Dublin</title>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"
         integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
+    <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-base.min.js" type="text/javascript"></script>
+    <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-cartesian.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -288,11 +290,23 @@
                         </tr>
                     </table>
                 </div>
-                <!-- SVG PIE CHART -->
+                <!-- Bar Chart -->
+
+                <div>
+
+                    <div class="chart-box" id="container"></div>
+
+                </div>
+
+
+
+
+                <!-- SVG PIE CHART 
+
                 <div>
 
                     <?xml version="1.0" encoding="utf-8"?>
-                    <!-- Generator: Adobe Illustrator 25.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                    <!-- Generator: Adobe Illustrator 25.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -
                     <svg class="dub-seats-pie" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1900 1900"
                         style="enable-background:new 0 0 800 800;" xml:space="preserve">
@@ -547,47 +561,65 @@
                         </g>
                     </svg>
 
-                </div>
-                <!-- BAR CHART -->
-                <!-- <div>
-                    <img class="dub-bars" src="/assets/img/dubbarchart.png" alt="">
                 </div> -->
 
-                <!-- BAR CHART 2 SVG -->
-                <div>
-                    <img class="dub-bars" src="/assets/img/newbarchartjpg.jpg" alt="">
-                </div>
                 <!-- end of righthand box -->
 
             </div>
 
-            <div>
-                <img class="dub-table" src="" alt="">
-                <img class="dub-pie" src="" alt="">
-                <img class="dub-bar-chart" src="" alt="">
-            </div>
-
-            <!-- DUBLIN FINGAL DATA -->
 
 
-            <div class="card">
-                <div class="card-back card-face ">
-                    <img class="dub-fingal-table" src="" alt="">
-                    <img class="dub-fingal-pie" src="" alt="">
-                    <img class="dub-fingla-barchart" src="" alt="">
 
-                </div>
-
-                <div class="card-front card-face">
-                    <img class="" src="" alt="">
-                </div>
-            </div>
 
         </div>
     </div>
 
 
     </div>
+    <script>
+        anychart.onDocumentReady(function () {
+
+            anychart.theme(anychart.themes.darkEarth);
+
+            // set the data
+            var data = {
+                header: ["Party", "Vote Share"],
+                rows: [
+                    ["Sinn Fein ", 100000, "##093505"],
+                    ["Fine Gael", 87000],
+                    ["Green Party", 90000],
+                    ["Fianna Fáil", 80000],
+                    ["Sol-PBP", 32000],
+                    ["Soc Dems ", 25000],
+                    ["Labour", 22000],
+                    ["Ind4Change", 20000],
+                    ["independents", 10000]
+
+                ]
+            };
+
+            // create the chart
+            var chart = anychart.bar();
+
+            // add the data
+            chart.data(data);
+
+            chart.pointWidth(20);
+
+            // set the chart title
+            chart.title("Percentage FPV GE 2020 - DUBLIN");
+            //Styling chart
+            chart.barsPadding(0);
+            var axisLabels = chart.xAxis().labels();
+            axisLabels.useHtml(true);
+            axisLabels.format("<b style='color:black;'>{%value}</b>");
+
+
+            // draw
+            chart.container("container");
+            chart.draw();
+        });
+    </script>
     <script src="script.js"></script>
     <script src="direct_map.js"></script>
 </body>
